--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,4 +31,5 @@ jobs:
         python -m pip install -e .
     - name: Test with pytest
       run: |
+        python tlspyo/generate_certificates.py
         pytest --timeout=10
